# libmidi

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  LICENSE  README.md  READM_zh-CN.md
cmake/: appimage.cmake
imgui/: CMakeLists.txt  imconfig.h.in  imgui_texture.cpp  imgui_texture.h
libmidi/: CMakeLists.txt  aq.c  aq.h  audio_cnv.c  audio_cnv.h  bitset.c  bitset.h  common.c  common.h  controls.c  controls.h  dumb_c.c  effect.c  fft4g.c  fft4g.h  filter.c  filter.h  freq.c  freq.h  instrum.c  instrum.h  m2m.c  mblock.c  mblock.h  memb.c  memb.h  mfi.c  mid_defs.c  midi_a.c  miditrace.c  miditrace.h  mix.c  mix.h  mt19937ar.c  ncurs_c.c  newton_table.h  output.c  output.h  playmidi.c  playmidi.h  (+35 more)
midi_demo/Bealtes/: freeas.mid  heyjudy.mid  imagine.mid  letitbe.mid  yesterd1.mid  yesterda.mid
midi_demo/Eagles/: 加州旅店.mid  加州旅店XG.mid  加州旅店电音.mid
midi_demo/Michael Jackson/: Bad.mid  Rock With You.mid  Thriller.mid  beatit.mid  bilyjean.mid  blackorw.mid  dst.mid  girl.mid  healtwld.mid  ijcslvu.mid  lbrngirl.mid  manintm.mid  rembrttm.mid  smthcrml.mid  strngrnm.mid  twayummf.mid  wannabe.mid
midi_demo/awe64/: 1STYLE64.MID  2MOZPC64.MID  2STYLE64.MID  43BRA64R.MID  51BRAN64.MID  DANCE64.MID  OVERTURE.MID  PARTI364.MID  PARTI64.MID  PASTOR64.MID  POP64.MID  STAR64.MID  SURPRI64.MID  SYM64.MID  TCHAI64R.MID
midi_demo/awm_songs/: ACOU1XG.MID  ATMSPHRE.MID  Always.mid  BLUGRASS.MID  CHATSHOW.MID  CHILLOUT.MID  COP_OUT.MID  DRUMZ_XG.MID  Djdelite.mid  FIZZY.MID  FUNCT_U.MID  GERONIMO.MID  HAUNT_XG.MID  ISTANBUL.MID  JAZZJUNG.MID  JETSKI.MID  JIVE_XG.MID  JOCKROCK.MID  LAIDBACK.MID  LPLAYBOY.MID  MATRIX.MID  PIEDRADU.MID  POP31XG.MID  ROCKING.MID  SHELLSHK.MID  SMOKY.MID  SOSXG.MID  STARS.MID  Srv2.mid  TRANZ.MID  TRIP.MID  ZAMBEZE.MID  bhangra.mid  bopcombo.mid  cl40xg.mid  rck37xg.mid
midi_demo/guita/: Aguado_Polonaise_op2no2.mid  Aguado_Prelude_no1.mid  Aguado_Rondo_in_A_minor.mid  Aguado_Study_no20.mid  Aguado_Study_no27.mid  Albeniz_Danza_Espagnola.mid  Albeniz_Leyenda.mid  Albeniz_Mallorca2.mid  Albeniz_Suite_Espana_op165_Preludio.mid  Albeniz_Suite_Espana_op165_Zortzico.mid  Albinoni_Adagio.mid  Anonym_Dark_Eyes.mid  Anonym_El_Noy_de_la_Mare.mid  Anonym_Gagliarda.mid  Anonym_Greensleeves.mid  Anonym_Hunter.mid  Anonym_Packington's_Pound.mid  Anonym_Spanish_Ballad.mid  Anonym_Viola_Quebrada.mid  Anonym_jeux-int.mid  Aquino_Canon_for_two_guitars.mid  Aquino_Essay2.mid  Aquino_Essay_Dminor.mid  Aquino_Intermezzo.mid  Aquino_Oaxacan_song.mid  Aquino_Ponce_intermezzo.mid  Aquino_Rondo_Eminor.mid  Aquino_Sonatina_Allegretto.mid  Aquino_Sonatina_Allegro.mid  Aquino_Sonatina_Andante_graciozo.mid  Aquino_Waltz_Oaxaca.mid  Aquino_prelude_Gmajor.mid  Aquino_prelude_in_Aminor.mid  Azpiazu_Catalonya.mid  Azpiazu_El_Vito.mid  Azpiazu_Murciana_Danza.mid  Azpiazu_Salmantina_Danza.mid  Bach_996_lute_suite_gig.mid  Bach_996_lute_suite_prel.mid  Bach_BWV1004_Violin_Solo_Chaconne.mid  (+184 more)
midi_demo/jazz/: blues.mid  boogie.mid  chuck1.mid  chuck2.mid  gmarag.mid  housejaz.mid  magnetic.mid  old.mid  pink_panther.mid  pop.mid  snoopy.mid  solo1.mid  solo2.mid
midi_demo/midi/: codes.mid  midi002.mid  midi004.mid  midi005.mid  midi008.mid  midi009.mid  midi010.mid  midi012.mid  midi013.mid  midi014.mid  midi016.mid  midi017.mid  midi018.mid  midi019.mid  midi020.mid  midi021.mid  midi022.mid  midi024.mid  midi025.mid  midi026.mid  midi027.mid  midi028.mid  midi029.mid  midi031.mid  midi032.mid  midi033.mid  midi035.mid  midi037.mid  midi040.mid  midi042.mid  midi045.mid  midi046.mid  midi048.mid  midi049.mid  midi051.mid  midi052.mid  midi053.mid  midi054.mid  midi055.mid  midi056.mid  (+87 more)
midi_demo/test/: 4SEASONS.MID  BACHBRAN.MID  BALDMNTN.MID  BEETHOVE.MID  CHOPIN.MID  CLASISCL.MID  DEUCE.MID  DRUMPERC.MID  EINEKLEI.MID  FIGARO.MID  FLOWERS.MID  GOSPEL.MID  GSTRING.MID  HARPSIGM.MID  ITALSYGM.MID  LARK.MID  MA1812.MID  MASTER.MID  MIN-G.MID  MK-DEMO.MID  MOZART.MID  PLIZST4.MID  PRECSM.MID  PRIMEC.MID  PWRHSE.MID  SATSMILE.MID  SEVILLE.MID  SOFTLY.MID  SUMMSKY.MID  SWNGCA.MID  TOCATA.MID  ZHAYDNGM.MID  cavatina.mid  test-decay.mid  test-panning.mid  test-scale.mid
midi_demo/vl_songs/: Bounce3.mid  COOLJIVA.MID  DINOJUNG.MID  Dance.mid  Dogroova.mid  Freude.mid  HealTheWorld.mid  Kavaller.mid  Marche.mid  Osolemio.mid  Oxygen.mid  Rebelle.mid  Tableaux.mid  Wiene.mid
midi_demo/yamaha/: 01DR_XG.MID  02EB_XG.MID  03EG_XG.MID  04EP_XG.MID  05RV_XG.MID  BACK1950.MID  JUNGLE.MID  LIVE.MID  STRACKS.MID  TECHNO.MID
soundfont/: README.md  midi-gm.cfg  midi-mini.cfg
soundfont/gm/: acbass.pat  accordn.pat  acguitar.pat  acpiano.pat  agogo.pat  agogohi.pat  agogolo.pat  altosax.pat  applause.pat  atmosphr.pat  aurora.pat  bagpipes.pat  banjo.pat  barisax.pat  basslead.pat  bassoon.pat  belltree.pat  bongohi.pat  bongolo.pat  bottle.pat  bowglass.pat  britepno.pat  cabasa.pat  calliope.pat  carillon.pat  castinet.pat  celeste.pat  cello.pat  charang.pat  chiflead.pat  choir.pat  church.pat  claps.pat  clarinet.pat  clave.pat  clavinet.pat  cleangtr.pat  concrtna.pat  congahi1.pat  congahi2.pat  (+147 more)
soundfont/mini/: acpiano.pat  altosax.pat  bongolo.pat  cabasa.pat  congalo.pat  cuica1.pat  cuica2.pat  cymchina.pat  cymcrsh1.pat  cymride1.pat  flute.pat  fngrbass.pat  frenchrn.pat  fretnoyz.pat  guiro2.pat  harp.pat  hihatcl.pat  hihatop.pat  hitbrass.pat  kick1.pat  oboe.pat  scratch1.pat  synbass1.pat  tamborin.pat  tomhi2.pat  woodblk1.pat
test/: Info.plist  bin2c.c  immidi.cpp  immidi.icns  linuxdeploy.desktop  logo.rc  sample.c  timidity.c
